--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.7.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "nodemon": "^1.12.1"
   },
   "devDependencies": {
     "eslint": "^3.11.1"
