--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "expressjs_boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "start": "node ./server/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -L ./server/bin/www.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
