Added MongoExpress to docker-compose.yml (dev only)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,14 @@ services:
     ports:
       - "27017:27017"
 
+  mongo_admin:
+    image: mongo-express
+    container_name: eb_mongo_admin
+    links:
+      - mongo
+    ports:
+      - "8081:8081"
+
   redis:
     image: redis
     container_name: eb_redis
