--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {
   worker_connections  4096;  ## Default: 1024
 }
 
-http{
+http {
 
   # server {
     #
@@ -20,7 +20,8 @@ http{
       # TODO - change to 80
       # Add dev.domain.com to /etc/hosts to point at NGINX proxy correctly
       # listen 8080;
-      listen 80;
+      # listen 80;
+      listen 80 default_server;
 
       # Type your domain name below
       # server_name 127.0.0.1;
@@ -43,15 +44,30 @@ http{
       # Client served from / (root)
       location / {
 
-        proxy_pass http://127.0.0.1:4000;
-        proxy_http_version 1.1;
-        proxy_set_header X-Forwarded-Proto http;
+        # proxy_pass http://127.0.0.1:4000;
+        # proxy_http_version 1.1;
+        # proxy_set_header X-Forwarded-Proto http;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        # proxy_set_header Connection 'upgrade';
+        # proxy_set_header Host $host;
+        # proxy_cache_bypass $http_upgrade;
+
+        proxy_pass http://127.0.0.1:4000/;
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Referer $http_referer;
+        # proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
       }
+
+      # location / {
+      #     auth_basic              "Restricted";
+      #     auth_basic_user_file    auth.htpasswd;
+
+      #     proxy_pass                          http://${FORWARD_HOST}:${FORWARD_PORT};
+      #     proxy_read_timeout                  900;
+      # }
 
       # Server served from /api
       # location /api {
